feat: Se agrega funcionalidad de registro de adiciones y reducciones. udistrital/resoluciones_cliente_v2#11
