# models/objeto_modificaciones.go
@@ -1,0 +1,17 @@
+package models
+
+import "time"
+
+type ObjetoModificaciones struct {
+	CambiosVinculacion       *CambioVinculacion
+	ResolucionNuevaId        *ResolucionVinculacionDocente
+	ModificacionResolucionId int
+}
+
+type CambioVinculacion struct {
+	NumeroHorasSemanales int
+	NumeroSemanas        int
+	FechaInicio          time.Time
+	DocPresupuestal      *DocumentoPresupuestal
+	VinculacionOriginal  *Vinculaciones
+}
